--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.11.1
+FROM node:8.14.0
 
-ENV GO111MODULE=on
-
-WORKDIR /go/src/hello-grpc-web/server
+WORKDIR /server
 COPY . .
-RUN go get github.com/pilu/fresh
-CMD ["fresh"]
+RUN yarn install && \
+    yarn run build
+CMD npm rebuild grpc --target=8.14.0 --target_arch=x64 --target_platform=linux --target_libc=glibc && \
+    yarn start
 EXPOSE 9090
