--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   server:
     build: ./server
     volumes:
-      - ./server/:/go/src/hello-grpc-web/server
+      - ./server:/server
     ports:
       - "9090:9090"
     container_name: "server"
@@ -18,7 +18,6 @@ services:
   client:
     build: ./client
     volumes:
-      - ./client/src:/client/src
-      - ./client/public:/client/public
+      - ./client:/client
     ports:
       - "3000:3000"
